test/org/midica/testfiles/failing/global-cmd-in-instruments.midica
INSTRUMENTS
	0 0 test
	*
END
